--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,73 +1,30 @@
-@import 'header.css';
-@import 'about.css';
-@import 'portfolio.css';
-@import 'contact.css';
-
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'Georgia', Times, Times New Roman, serif;
-}
-
-p, li {
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-}
-
 body {
-    background-image: url('../images/background.png');
-    background-color: #050b1c;
-    color: #bbdce8;
-    margin: 0;
-    padding: 0;
+    background-color: #EEF2F3;
 }
 
-.wrapper {
-    position: absolute;
-    width: 100%;
-    background-color: white;
-    height: 100px;
-    border-bottom: 2px solid #4aaaa5;
-}
-
-.container {
-    margin: auto;
-    width: 960px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    background-color: white;
-}
-
-hr {
-    border-color: #62acc7;
-    margin-bottom: 20px;
-}
-
-footer {
+.menu {
+    background-color: darkkhaki;
+    height: 100%;
     position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: #6192a3;
-    text-align: center;
-    border-top: 8px solid #4aaaa5
+    width: 190px;
+    font-size: 0.9rem;
 }
 
-.clearfix:after {
-    visibility: hidden;
-    display: block;
-    font-size: 0;
-    content: " ";
-    clear: both;
-    height: 0;
-}
-.clearfix {
-    display: inline-block;
+.menu ul, .items ul {
+    list-style-type: none;
 }
 
-/* start commented backslash hack \*/
-* html .clearfix {
-    height: 1%;
+.items li {
+    padding-top: 10px;
 }
 
-.clearfix {
-    display: block;
+a:link, a:visited {
+    text-decoration: none;
+    color: darkslategrey;
 }
-/* close commented backslash hack */
+
+a:hover, a:active {
+    color: white;
+    background-color: black;
+    padding: 10px;
+}
