fixed layout with some color themes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,30 +1,55 @@
 body {
-    background-color: #EEF2F3;
+    background-color: #2b3a37;
+    font-family: 'Space Mono', monospace;
 }
 
 .menu {
-    background-color: darkkhaki;
     height: 100%;
     position: fixed;
     width: 190px;
     font-size: 0.9rem;
 }
 
-.menu ul, .items ul {
+.menu ul, .items ul, .logo {
     list-style-type: none;
 }
+
+.logo {
+    font-family: 'Megrim', cursive;
+    font-weight: 900;
+    font-size:1.2rem;
+}
+
+.logo a:link, a:visited {
+    text-decoration: none;
+    color: #55e8c8;
+}
+
+/* .logo a:hover, a:active {
+    color: white;
+} */
 
 .items li {
     padding-top: 10px;
 }
 
-a:link, a:visited {
+.items a:link, a:visited {
     text-decoration: none;
-    color: darkslategrey;
+    color: #55e8c8;
 }
 
-a:hover, a:active {
+.items a:hover, a:active {
     color: white;
     background-color: black;
-    padding: 10px;
+    padding: 0 10px;
+}
+
+@media only screen and (max-width: 720px) {
+    .menu{
+        width: 100px;
+        padding-left: 5px;
+    }
+    .menu ul, .items ul {
+        display: inline;
+    }
 }
