--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,6 +69,7 @@ body {
 
 .crossed-out {
     text-decoration: line-through wavy #55e8c8;
+    -webkit-text-decoration-line: line-through wavy #55e8c8; /* Safari */
 }
 
 @media only screen and (max-width: 720px) {
@@ -79,8 +80,4 @@ body {
     .menu ul, .items ul {
         display: inline;
     }
-
-    .crossed-out {
-    text-decoration: line-through wavy #55e8c8;
-}
 }
