--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,4 +80,12 @@ body {
     .menu ul, .items ul {
         display: inline;
     }
+
+    .content {
+        position: absolute;
+        color: white;
+        left: 110px;
+        margin-top: 50px;
+        margin-right: 20px;
+    }
 }
