--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,14 +1,50 @@
-.container {
-    display: grid;
-    grid-template-columns: auto 50px auto;
-    grid-template-rows: [row1] 25px [row2] 25px [row3];
-    grid-template-areas: 
-        "header header header" 
-        "footer footer footer";
-}
+/* iPhone 8/X */
+@media screen and (max-width: 375px){
+    .container {
+        display: grid;
+        grid-template-columns: 125px 125px 125px;
+        grid-template-rows: [row1] 225px [row2] 35px [row3] 190px [row4] 180px [row5] 45px;
+    }
 
-#title{
-    grid-row-start: row3;
-    grid-column-start: 3;
-    background-color: red;
+    .title{
+        grid-row-start: row2;
+        grid-column-start: 2;
+        text-align: center;
+        font-size: 20px;
+    }
+
+    .subtitle{
+        grid-row-start: row3;
+        grid-column-start: 2;
+        text-align: center;
+        font-size: 18px;
+        padding-top: 25px;
+    }
+
+    #nextWork{
+        grid-row-start: row5;
+        grid-column-start: 2;
+        text-align: center;
+        font-size: 18px;
+    }
+
+    #topbar{
+        grid-row-start: row1;
+        grid-column-start: 1;
+        margin: 10px 10px;
+    }
+
+    #portfolio{
+        grid-row-start: row1;
+        grid-column-start: 1;
+        grid-column-end: 3;
+        margin: 10px 10px;
+        position: relative;
+        top: 50px;
+        font-size: 20px;
+    }
+
+    .project-1{
+        margin-top: 15px;
+    }
 }
